# examples

./: .gitattributes  .gitignore  README.md
inference/: CMakeLists.txt  README.md  SE5-OpenPose-Demo-Config.docx  cameras.json  compile.sh  inference.h  inference2.h  inference3.h  pack.sh  release.md  thread_queue.h  toolchain-aarch64-linux.cmake  toolchain-mips64-linux.cmake
inference/bmgui/: CMakeLists.txt  bmgui.cpp  bmgui.h  bmgui_unittest.cpp  container_widget.cpp  container_widget.h  container_widget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtgui_utils.h  video_opengl_widget.cpp  video_opengl_widget.h  video_pixmap_widget.cpp  video_pixmap_widget.h  video_pixmap_widget.ui  video_render.h  video_widget.cpp  video_widget.h  video_widget.ui  videoui.cpp  videoui.h  videoui.pro
inference/bmgui-lite/: CMakeLists.txt  bmgui-lite.h  window_QT.cpp  window_QT.h
inference/bmutility/: CMakeLists.txt  README.md  base64_unittest.cpp  bmutility.cpp  bmutility.h  bmutility_basemodel.hpp  bmutility_image.h  bmutility_list.h  bmutility_pool.cpp  bmutility_pool.h  bmutility_profile.h  bmutility_string.cpp  bmutility_string.h  bmutility_timer.cpp  bmutility_timer.h  bmutility_types.---  bmutility_types.h  ffmpeg_global.h  stream_cvdecode.cpp  stream_cvdecode.h  stream_decode.cpp  stream_decode.h  stream_demuxer.cpp  stream_demuxer.h  stream_pusher.h  stream_sei.cpp  stream_sei.h  stream_unittest.cpp
inference/cmake/: Findexiv2.cmake  Findglog.cmake
inference/cvs10/: CMakeLists.txt  cameras.json  common_types.h  configuration.h  face_detector.cpp  face_detector.h  face_extract.cpp  face_extract.h  main.cpp  resnet50.cpp  resnet50.h  worker.cpp  worker.h
inference/ddr_reduction/: CMakeLists.txt  README.md  ddr_reduction.cpp  ddr_reduction.h  ddr_reduction_unittest.cpp
inference/examples/: CMakeLists.txt  cameras.json  cameras_v1.json  configuration.h
inference/examples/face_detect/: CMakeLists.txt  face_detector.cpp  face_detector.h  main.cpp  worker.cpp  worker.h
inference/examples/face_recognition/: CMakeLists.txt  face_common.h  face_detector.cpp  face_detector.h  face_extract.cpp  face_extract.h  face_landmark.cpp  face_landmark.h  face_worker.cpp  face_worker.h  main.cpp
inference/examples/multi/: CMakeLists.txt  README.md  main.cpp  worker.cpp  worker.h  yolov5s.cpp  yolov5s.h
inference/examples/openpose/: CMakeLists.txt  main.cpp  openpose.cpp  openpose.h  pose_postprocess.cpp  pose_postprocess.h  worker.cpp  worker.h
inference/examples/retinaface/: CMakeLists.txt  detect.cpp  macros.h  main.cpp  retinaface.cpp  retinaface.h  retinaface_test_throughput.cpp  widerface_val.cpp  worker.cpp  worker.h
inference/examples/ruilai/: CMakeLists.txt  common_types.h  main.cpp  mobilenetv2.cpp  mobilenetv2.h  pipeline.h  resnet50.cpp  resnet50.h  retinaface.cpp  retinaface.h  ruilai_api.cpp  ruilai_api.h  test.cpp  worker.cpp  worker.h  wsdan.cpp  wsdan.h
inference/examples/safe_hat_detect/: CMakeLists.txt  common.h  face_worker.cpp  face_worker.h  main.cpp  person_detect.cpp  person_detect.hpp  safety_hat_detect.cpp  safety_hat_detect.hpp
inference/examples/video_stitch/: CMakeLists.txt  encoder.cpp  encoder.h  main.cpp  stitch.cpp  stitch.h  test.cpp  worker.cpp  worker.h  yolov5s.cpp  yolov5s.h
inference/examples/video_stitch/rtsp/: BTRTSPServer.cpp  BTRTSPServer.h  H264FrameSource.cpp  H264FrameSource.h  H264QueMediaSubsession.cpp  H264QueMediaSubsession.h  Live555RtspServer.cpp  Live555RtspServer.h
inference/examples/video_stitch/rtsp/live555/: Makefile  config.armlinux  config.freebsd  config.iphone-simulator  config.macosx  config.solaris-64bit
inference/examples/video_stitch/rtsp/live555/BasicUsageEnvironment/: BasicHashTable.cpp  BasicTaskScheduler.cpp  BasicTaskScheduler0.cpp  BasicUsageEnvironment0.cpp
inference/examples/video_stitch/rtsp/live555/UsageEnvironment/: HashTable.cpp  Makefile  Makefile.tail  UsageEnvironment.cpp  strDup.cpp
inference/examples/video_stitch/rtsp/live555/WindowsAudioInputDevice/: WindowsAudioInputDevice.mak  WindowsAudioInputDevice_common.cpp  WindowsAudioInputDevice_common.hh  WindowsAudioInputDevice_mixer.cpp  WindowsAudioInputDevice_mixer.hh  WindowsAudioInputDevice_noMixer.cpp
inference/examples/video_stitch/rtsp/live555/groupsock/: Groupsock.cpp  Makefile.tail
inference/examples/video_stitch/rtsp/live555/liveMedia/: AC3AudioFileServerMediaSubsession.cpp  AC3AudioRTPSink.cpp  ADTSAudioFileSource.cpp  AMRAudioFileServerMediaSubsession.cpp  AMRAudioFileSource.cpp  AMRAudioSource.cpp  AVIFileSink.cpp  AudioRTPSink.cpp  Base64.cpp  ByteStreamMultiFileSource.cpp  DVVideoFileServerMediaSubsession.cpp  DVVideoRTPSource.cpp  DVVideoStreamFramer.cpp  DigestAuthentication.cpp  EBMLNumber.cpp  EBMLNumber.hh.orig  FileServerMediaSubsession.cpp  FramedFileSource.cpp  FramedSource.cpp  GSMAudioRTPSink.cpp  H261VideoRTPSource.cpp  H263plusVideoRTPSink.cpp  H263plusVideoStreamParser.cpp  H264VideoFileServerMediaSubsession.cpp  H264VideoRTPSink.cpp  H264VideoRTPSource.cpp  H264or5VideoFileSink.cpp  H264or5VideoRTPSink.cpp  H264or5VideoStreamDiscreteFramer.cpp  H265VideoFileSink.cpp  H265VideoRTPSource.cpp  JPEGVideoSource.cpp  (+70 more)
inference/examples/yolov5/: CMakeLists.txt  main.cpp  worker.cpp  worker.h  yolov5s.cpp  yolov5s.h
inference/tracker/: CMakeLists.txt  bm_tracker.cpp  bm_tracker.h
multimedia/jpeg/: CMakeLists.txt  README.md  flower_1920x1080.yuv  simple_ffmpeg_jpeg_enc_from_file.cpp  simple_ffmpeg_video_enc.cpp  simple_ffmpeg_video_jpeg_dec.cpp
simple/yolov4/: CMakeLists.txt  README.md
simple/yolov4/cpp_cv_bmcv_bmrt_postprocess/: Makefile.arm_pcie  Makefile.mips  Makefile.pcie  README.md  main.cpp
simple/yolov4/data/models/: yolov3_416_coco_fp32_1b_4b.bmodel  yolov3_416_coco_int8_1b_4b.bmodel  yolov4_608_coco_fp32.bmodel  yolov4_608_coco_int8.bmodel
simple/yolov4/python/: README.md  main.py  requirements.txt
simple/yolov4/python/configs/: yolov3_416.yml  yolov3_608.yml  yolov4_416.yml  yolov4_608.yml
simple/yolov4/python/detector/sophon/: base_detector.py
simple/yolov4/python/utils/: utils.py
(+554 files in other folders)
